Changes the button offset's to avoid covering/being close to the scrollbar

--- a/client/less/chat.less
+++ b/client/less/chat.less
@@ -22,3 +22,6 @@
 .gitter-chat-embed.is-collapsed:not(.is-loading) {
   transform: translateX(110%);
 }
+.gitter-chat-embed-action-bar{
+   margin-right:15px;
+}
